--- a/Project_2/ETL_Mini_Project_Starter_Code_Lisa_M_and_Jesus_V.ipynb
+++ b/Project_2/ETL_Mini_Project_Starter_Code_Lisa_M_and_Jesus_V.ipynb
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
        "        'science fiction', 'audio'], dtype=object)]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,32 +744,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 2 3 4 5 6 7 8 9]\n",
-      "[ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Create numpy arrays from 1-9 for the categories and 1-24 for the subcategories.\n",
-    "category_ids = np.arange(1, 10)\n",
-    "subcategory_ids = np.arange(1, 25)\n",
-    "\n",
-    "print(category_ids)\n",
-    "print(subcategory_ids)"
+    "type(category_ids)"
    ]
   },
   {
@@ -799,22 +789,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 152,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "All arrays must be of the same length",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[152], line 8\u001b[0m\n\u001b[1;32m      3\u001b[0m category_names \u001b[38;5;241m=\u001b[39m categories\n\u001b[1;32m      7\u001b[0m data \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcategory_id\u001b[39m\u001b[38;5;124m'\u001b[39m: category_ids, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcategory_name\u001b[39m\u001b[38;5;124m'\u001b[39m: category_names}\n\u001b[0;32m----> 8\u001b[0m category_df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mDataFrame\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/Users/anaconda3/lib/python3.10/site-packages/pandas/core/frame.py:664\u001b[0m, in \u001b[0;36mDataFrame.__init__\u001b[0;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[1;32m    658\u001b[0m     mgr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_init_mgr(\n\u001b[1;32m    659\u001b[0m         data, axes\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mindex\u001b[39m\u001b[38;5;124m\"\u001b[39m: index, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcolumns\u001b[39m\u001b[38;5;124m\"\u001b[39m: columns}, dtype\u001b[38;5;241m=\u001b[39mdtype, copy\u001b[38;5;241m=\u001b[39mcopy\n\u001b[1;32m    660\u001b[0m     )\n\u001b[1;32m    662\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data, \u001b[38;5;28mdict\u001b[39m):\n\u001b[1;32m    663\u001b[0m     \u001b[38;5;66;03m# GH#38939 de facto copy defaults to False only in non-dict cases\u001b[39;00m\n\u001b[0;32m--> 664\u001b[0m     mgr \u001b[38;5;241m=\u001b[39m \u001b[43mdict_to_mgr\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcopy\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcopy\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtyp\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmanager\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    665\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data, ma\u001b[38;5;241m.\u001b[39mMaskedArray):\n\u001b[1;32m    666\u001b[0m     \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mma\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmrecords\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mmrecords\u001b[39;00m\n",
+      "File \u001b[0;32m/Users/anaconda3/lib/python3.10/site-packages/pandas/core/internals/construction.py:493\u001b[0m, in \u001b[0;36mdict_to_mgr\u001b[0;34m(data, index, columns, dtype, typ, copy)\u001b[0m\n\u001b[1;32m    489\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    490\u001b[0m         \u001b[38;5;66;03m# dtype check to exclude e.g. range objects, scalars\u001b[39;00m\n\u001b[1;32m    491\u001b[0m         arrays \u001b[38;5;241m=\u001b[39m [x\u001b[38;5;241m.\u001b[39mcopy() \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(x, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdtype\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01melse\u001b[39;00m x \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m arrays]\n\u001b[0;32m--> 493\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43marrays_to_mgr\u001b[49m\u001b[43m(\u001b[49m\u001b[43marrays\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtyp\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtyp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconsolidate\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcopy\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/Users/anaconda3/lib/python3.10/site-packages/pandas/core/internals/construction.py:118\u001b[0m, in \u001b[0;36marrays_to_mgr\u001b[0;34m(arrays, columns, index, dtype, verify_integrity, typ, consolidate)\u001b[0m\n\u001b[1;32m    115\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m verify_integrity:\n\u001b[1;32m    116\u001b[0m     \u001b[38;5;66;03m# figure out the index, if necessary\u001b[39;00m\n\u001b[1;32m    117\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m index \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 118\u001b[0m         index \u001b[38;5;241m=\u001b[39m \u001b[43m_extract_index\u001b[49m\u001b[43m(\u001b[49m\u001b[43marrays\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    119\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    120\u001b[0m         index \u001b[38;5;241m=\u001b[39m ensure_index(index)\n",
+      "File \u001b[0;32m/Users/anaconda3/lib/python3.10/site-packages/pandas/core/internals/construction.py:666\u001b[0m, in \u001b[0;36m_extract_index\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m    664\u001b[0m lengths \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mset\u001b[39m(raw_lengths))\n\u001b[1;32m    665\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(lengths) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m--> 666\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAll arrays must be of the same length\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    668\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m have_dicts:\n\u001b[1;32m    669\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    670\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMixing dicts with non-Series may lead to ambiguous ordering.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    671\u001b[0m     )\n",
+      "\u001b[0;31mValueError\u001b[0m: All arrays must be of the same length"
+     ]
+    }
+   ],
    "source": [
     "# Create a category DataFrame with the category_id array as the category_id and categories list as the category name.\n",
-    "category_df = pd.DataFrame({'category_id': cat_ids, 'category': category_ids})\n",
+    "category_ids = cat_ids\n",
+    "category_names = categories\n",
     "\n",
     "\n",
-    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n",
-    "subcategory_df = pd.DataFrame({'subcategory_id': scat_ids, 'subcategory': subcategory_ids})\n",
-    "\n"
+    "\n",
+    "data = {'category_id': category_ids, 'category_name': category_names}\n",
+    "category_df = pd.DataFrame(data)\n",
+    "\n",
+    "#subcategory_df = pd.DataFrame({'subcategory_id': scat_ids, 'subcategory': subcategory_ids})\n",
+    "\n",
+    "#subcategory_ids = np.array(scat_ids)\n",
+    "#subcategory_names = np.array(subcategories)\n",
+    "\n",
+    "#data = {'subcategory_id': subcategory_ids, 'subcategory_name': subcategory_names}\n",
+    "#subcategory_df = pd.DataFrame(data)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -839,73 +854,73 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>category_id</th>\n",
-       "      <th>category</th>\n",
+       "      <th>category_name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>cat1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>food</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>cat2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>music</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>cat3</td>\n",
-       "      <td>3</td>\n",
+       "      <td>technology</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>cat4</td>\n",
-       "      <td>4</td>\n",
+       "      <td>theater</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>cat5</td>\n",
-       "      <td>5</td>\n",
+       "      <td>film &amp; video</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>cat6</td>\n",
-       "      <td>6</td>\n",
+       "      <td>publishing</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>cat7</td>\n",
-       "      <td>7</td>\n",
+       "      <td>games</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>cat8</td>\n",
-       "      <td>8</td>\n",
+       "      <td>photography</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>cat9</td>\n",
-       "      <td>9</td>\n",
+       "      <td>journalism</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  category_id  category\n",
-       "0        cat1         1\n",
-       "1        cat2         2\n",
-       "2        cat3         3\n",
-       "3        cat4         4\n",
-       "4        cat5         5\n",
-       "5        cat6         6\n",
-       "6        cat7         7\n",
-       "7        cat8         8\n",
-       "8        cat9         9"
+       "  category_id category_name\n",
+       "0        cat1          food\n",
+       "1        cat2         music\n",
+       "2        cat3    technology\n",
+       "3        cat4       theater\n",
+       "4        cat5  film & video\n",
+       "5        cat6    publishing\n",
+       "6        cat7         games\n",
+       "7        cat8   photography\n",
+       "8        cat9    journalism"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -940,164 +955,164 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>subcategory_id</th>\n",
-       "      <th>subcategory</th>\n",
+       "      <th>category_id</th>\n",
+       "      <th>category_name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>subcat1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>food trucks</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>subcat2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>rock</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>subcat3</td>\n",
-       "      <td>3</td>\n",
+       "      <td>web</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>subcat4</td>\n",
-       "      <td>4</td>\n",
+       "      <td>plays</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>subcat5</td>\n",
-       "      <td>5</td>\n",
+       "      <td>documentary</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>subcat6</td>\n",
-       "      <td>6</td>\n",
+       "      <td>electric music</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>subcat7</td>\n",
-       "      <td>7</td>\n",
+       "      <td>drama</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>subcat8</td>\n",
-       "      <td>8</td>\n",
+       "      <td>indie rock</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>subcat9</td>\n",
-       "      <td>9</td>\n",
+       "      <td>wearables</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>subcat10</td>\n",
-       "      <td>10</td>\n",
+       "      <td>nonfiction</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>subcat11</td>\n",
-       "      <td>11</td>\n",
+       "      <td>animation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>subcat12</td>\n",
-       "      <td>12</td>\n",
+       "      <td>video games</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>subcat13</td>\n",
-       "      <td>13</td>\n",
+       "      <td>shorts</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>subcat14</td>\n",
-       "      <td>14</td>\n",
+       "      <td>fiction</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>subcat15</td>\n",
-       "      <td>15</td>\n",
+       "      <td>photography books</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>subcat16</td>\n",
-       "      <td>16</td>\n",
+       "      <td>radio &amp; podcasts</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>subcat17</td>\n",
-       "      <td>17</td>\n",
+       "      <td>metal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>subcat18</td>\n",
-       "      <td>18</td>\n",
+       "      <td>jazz</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>subcat19</td>\n",
-       "      <td>19</td>\n",
+       "      <td>translations</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>subcat20</td>\n",
-       "      <td>20</td>\n",
+       "      <td>television</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>subcat21</td>\n",
-       "      <td>21</td>\n",
+       "      <td>mobile games</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>subcat22</td>\n",
-       "      <td>22</td>\n",
+       "      <td>world music</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>subcat23</td>\n",
-       "      <td>23</td>\n",
+       "      <td>science fiction</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>subcat24</td>\n",
-       "      <td>24</td>\n",
+       "      <td>audio</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   subcategory_id  subcategory\n",
-       "0         subcat1            1\n",
-       "1         subcat2            2\n",
-       "2         subcat3            3\n",
-       "3         subcat4            4\n",
-       "4         subcat5            5\n",
-       "5         subcat6            6\n",
-       "6         subcat7            7\n",
-       "7         subcat8            8\n",
-       "8         subcat9            9\n",
-       "9        subcat10           10\n",
-       "10       subcat11           11\n",
-       "11       subcat12           12\n",
-       "12       subcat13           13\n",
-       "13       subcat14           14\n",
-       "14       subcat15           15\n",
-       "15       subcat16           16\n",
-       "16       subcat17           17\n",
-       "17       subcat18           18\n",
-       "18       subcat19           19\n",
-       "19       subcat20           20\n",
-       "20       subcat21           21\n",
-       "21       subcat22           22\n",
-       "22       subcat23           23\n",
-       "23       subcat24           24"
+       "   category_id      category_name\n",
+       "0      subcat1        food trucks\n",
+       "1      subcat2               rock\n",
+       "2      subcat3                web\n",
+       "3      subcat4              plays\n",
+       "4      subcat5        documentary\n",
+       "5      subcat6     electric music\n",
+       "6      subcat7              drama\n",
+       "7      subcat8         indie rock\n",
+       "8      subcat9          wearables\n",
+       "9     subcat10         nonfiction\n",
+       "10    subcat11          animation\n",
+       "11    subcat12        video games\n",
+       "12    subcat13             shorts\n",
+       "13    subcat14            fiction\n",
+       "14    subcat15  photography books\n",
+       "15    subcat16   radio & podcasts\n",
+       "16    subcat17              metal\n",
+       "17    subcat18               jazz\n",
+       "18    subcat19       translations\n",
+       "19    subcat20         television\n",
+       "20    subcat21       mobile games\n",
+       "21    subcat22        world music\n",
+       "22    subcat23    science fiction\n",
+       "23    subcat24              audio"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
